syntax = "proto3";

option csharp_namespace = "ProcessCalendar.API";

service doctor {
  // Sends a greeting
  rpc GetListDoctor (Empty) returns (GetListDoctorResponse);
  rpc AddNewDoctor (DoctorInfo) returns (AddNewDoctorResponse);
  rpc GetListAppointOfDoctor (AddNewDoctorResponse) returns (GetListAppointOfDoctorRespone);
}

// The request message containing the user's name.
message Empty {
}

// The response message containing the greetings.
message GetListDoctorResponse {
  repeated DoctorInfo doctorInfo = 1;
}

message DoctorInfo {
	int32 id = 1;
	string name = 2;
	string description = 3;
}

message AddNewDoctorResponse {
	int32 respone = 1;
}

message GetListAppointOfDoctorRespone {
	repeated ListAppointOfDoctor lstAppoint = 1;
	string nameDoctor = 2;
}

message ListAppointOfDoctor {
	int32 id = 1;
	int32 doctorId = 2;
	string namePatient = 3;
	string date = 4;
}

